--- a/index.html
+++ b/index.html
@@ -1,35 +1,69 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Piedra, Papel o Tijeras</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <div class="container">
-        <h1>Piedra, Papel o Tijeras</h1>
-        <div class="choices">
-            <div class="choice" id="piedra">
-                <img src="img/piedra.png" alt="Piedra">
-                <p>Piedra</p>
-            </div>
-            <div class="choice" id="papel">
-                <img src="img/papel.png" alt="Papel">
-                <p>Papel</p>
-            </div>
-            <div class="choice" id="tijeras">
-                <img src="img/tijeras.png" alt="Tijeras">
-                <p>Tijeras</p>
-            </div>
-        </div>
-        <div class="result">
-            <h2 id="resultado">Haz tu elección</h2>
-            <div class="result-display" id="result-display">
-                <!-- Aquí se mostrarán las imágenes y el resultado -->
-            </div>
-        </div>
-    </div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Reto Piedra-Papel-Tijeras ⚔️</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&family=Roboto+Mono&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <main class="container" role="main" aria-label="Juego Piedra Papel Tijeras">
+      <h1 class="title">⚔️ Reto Piedra, Papel o Tijeras ⚔️</h1>
+      <section
+        class="choices"
+        role="radiogroup"
+        aria-label="Opciones de juego piedra, papel o tijeras"
+      >
+        <button
+          class="choice"
+          id="piedra"
+          role="radio"
+          aria-checked="false"
+          aria-label="Piedra"
+          tabindex="0"
+        >
+          <img src="img/piedra.png" alt="Icono piedra" />
+          <span>Piedra</span>
+        </button>
+        <button
+          class="choice"
+          id="papel"
+          role="radio"
+          aria-checked="false"
+          aria-label="Papel"
+          tabindex="-1"
+        >
+          <img src="img/papel.png" alt="Icono papel" />
+          <span>Papel</span>
+        </button>
+        <button
+          class="choice"
+          id="tijeras"
+          role="radio"
+          aria-checked="false"
+          aria-label="Tijeras"
+          tabindex="-1"
+        >
+          <img src="img/tijeras.png" alt="Icono tijeras" />
+          <span>Tijeras</span>
+        </button>
+      </section>
+
+      <section
+        class="result"
+        aria-live="polite"
+        aria-atomic="true"
+        aria-relevant="additions text"
+      >
+        <h2 id="resultado" class="resultado-text">Haz tu elección</h2>
+        <div class="result-display" id="result-display"></div>
+      </section>
+    </main>
+
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
